適当な画像をimagesフォルダに格納。

--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -2,6 +2,13 @@ doctype html
 html
   head
     meta charset="utf-8"
-    title Reizoko Stock
+    title Reizoko Stock | 冷蔵庫の在庫
+    meta name="keywords"
+      content="HTML,コーディングTシャツ,Webデザイナー,プレゼント"
+    meta name="description"
+      content="HTMLへの愛を強調できる,コーディングTシャツ"
+
   body
-    ここに表示させたい文章や画像を書く
+    div class="row"
+      div class="col harf"
+        h1 大見出し：商品名
