ブラウザ上に画像をサイズ調整して表示することが出来た。

--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -11,4 +11,11 @@ html
   body
     div class="row"
       div class="col harf"
+        img src="/assets/nouka_man.png" alt="農家マン" height="200" width="300"
+      div class="col harf"
         h1 大見出し：商品名
+        p 商品説明文を書き込む
+          div
+            p
+              span 2980円
+  p Copyright &copy; wakabashop
