--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -13,8 +13,8 @@ html
       div class="col harf"
         img src="/assets/nouka_man.png" alt="農家マン" height="200" width="300"
       div class="col harf"
-        h1 大見出し：商品名
-        p 商品説明文を書き込む
+        h1 冷蔵庫のストックを管理する
+        p 冷蔵庫の在庫って忘れがち・・・。そんな悩みをこのアプリで解消する！
           div
             p
               span 2980円
