ul要素とli要素を使ってリスト作成してみた

--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -9,6 +9,10 @@ html
       content="HTMLへの愛を強調できる,コーディングTシャツ"
 
   body
+    ul
+      li TOP
+      li ABOUT
+      li HELP
     div class="row"
       div class="col harf"
         img src="/assets/nouka_man.png" alt="農家マン" height="200" width="300"
