target属性の動き確認

--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -10,7 +10,7 @@ html
 
   body
     ul
-      a href="/reizoko/new" NEW
+      a href="/reizoko/new" target="_blank" NEW
       li ABOUT
       li HELP
     div class="row"
