コメントの書き方、altの動き確認

--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -15,7 +15,8 @@ html
       li HELP
     div class="row"
       div class="col harf"
-        img src="/assets/nouka_man.png" alt="農家マン" height="200" width="300"
+        img src="/assets/nouka_man.png" alt="農家マン" height="200" width="300" 
+        /コメント
       div class="col harf"
         h1 冷蔵庫のストックを管理する
         p 冷蔵庫の在庫って忘れがち・・・。そんな悩みをこのアプリで解消する！
