--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -9,10 +9,13 @@ html
       content="HTMLへの愛を強調できる,コーディングTシャツ"
 
   body
-    ul
-      a href="/reizoko/new" target="_blank" NEW
-      li ABOUT
-      li HELP
+    header
+      nav
+        ul
+          li <a href="/reizoko/new" target="_blank"> NEW
+          li <a href="#"> ABOUT
+          li <a href="#"> HELP
+          /ul liタグを使う場合、aタグを<>で囲む必要あり
     div class="row"
       div class="col harf"
         img src="/assets/nouka_man.png" alt="農家マン" height="200" width="300" 
