--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -16,14 +16,16 @@ html
           li <a href="#"> ABOUT
           li <a href="#"> HELP
           /ul liタグを使う場合、aタグを<>で囲む必要あり
-    div class="row"
-      div class="col harf"
-        img src="/assets/nouka_man.png" alt="農家マン" height="200" width="300" 
-        /コメント
-      div class="col harf"
-        h1 冷蔵庫のストックを管理する
-        p 冷蔵庫の在庫って忘れがち・・・。そんな悩みをこのアプリで解消する！
-          div
-            p
-              span 2980円
-  p Copyright &copy; wakabashop
+    main
+      div class="row"
+        div class="col harf"
+          img src="/assets/nouka_man.png" alt="農家マン" height="200" width="300" 
+          /コメント
+        div class="col harf"
+          h1 冷蔵庫のストックを管理する
+          p 冷蔵庫の在庫って忘れがち・・・。そんな悩みをこのアプリで解消する！
+            div
+              p
+                span 2980円
+    footer
+      p Copyright &copy; wakabashop
