id属性、class属性を付けてみる

--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -9,7 +9,7 @@ html
       content="HTMLへの愛を強調できる,コーディングTシャツ"
 
   body
-    header
+    header id="itempage"
       nav
         ul
           li <a href="/reizoko/new" target="_blank"> NEW
@@ -24,8 +24,8 @@ html
         div class="col harf"
           h1 冷蔵庫のストックを管理する
           p 冷蔵庫の在庫って忘れがち・・・。そんな悩みをこのアプリで解消する！
-            div
+            div class="cartarea"
               p
-                span 2980円
+                span class="price" 2980円
     footer
       p Copyright &copy; wakabashop
