table作ってみた

--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -27,5 +27,19 @@ html
             div class="cartarea"
               p
                 span class="price" 2980円
+      table border="1"
+        tbody
+          tr
+            td 名前
+            td 単位
+            td 在庫数
+            td 備考
+            td 最終更新
+          tr
+            th キャベツ
+            th 個
+            th 1
+            th あと半分ぐらい
+            th 2020/3/1
     footer
       p Copyright &copy; wakabashop
