--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -3,10 +3,7 @@ html
   head
     meta charset="utf-8"
     title Reizoko Stock | 冷蔵庫の在庫
-    meta name="keywords"
-      content="HTML,コーディングTシャツ,Webデザイナー,プレゼント"
-    meta name="description"
-      content="HTMLへの愛を強調できる,コーディングTシャツ"
+    = stylesheet_link_tag 'reizoko', media: 'all'
 
   body
     header id="itempage"
