jumbotronを使ってみた

--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -20,12 +20,9 @@ html
         div class="col harf"
           img src="/assets/nouka_man.png" alt="農家マン" height="200" width="300" 
           /コメント
-        div class="col harf"
+        div class="center jumbotron"
           h1 冷蔵庫のストックを管理する
           p 冷蔵庫の在庫って忘れがち・・・。そんな悩みをこのアプリで解消する！
-            div class="cartarea"
-              p
-                span class="price" 2980円
       table border="1"
         tbody
           tr
