--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -3,7 +3,7 @@ html
   head
     meta charset="utf-8"
     title Reizoko Stock | 冷蔵庫の在庫
-    = stylesheet_link_tag 'reizoko', media: 'all'
+    = stylesheet_link_tag 'custom.css', media: 'all'
 
   body
     header class="navbar navbar-fixed-top navbar-inverse"
