ロゴの画像を追加。微々たるもの調整

--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -2,13 +2,13 @@ doctype html
 html
   head
     meta charset="utf-8"
-    title Reizoko Stock | 冷蔵庫の在庫
+    title Reizoko Stock | 冷蔵庫の残り物たち
     = stylesheet_link_tag 'reizoko', media: 'all'
 
   body
     header class="navbar navbar-fixed-top navbar-inverse"
       div class="container"
-        = link_to "冷蔵庫在庫管理", '#', id: "logo"
+        = link_to "REIZOKO", '#', id: "logo"
         nav
           ul class="nav navbar-nav navbar-right"
             li <a href="/reizoko/new" target="_blank"> NEW
