ロゴを画像に差し替え

--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -8,7 +8,7 @@ html
   body
     header class="navbar navbar-fixed-top navbar-inverse"
       div class="container"
-        = link_to "REIZOKO", '#', id: "logo"
+        = link_to image_tag('reizoko_app_logo.png'), '#', id: "logo"
         nav
           ul class="nav navbar-nav navbar-right"
             li <a href="/reizoko/new" target="_blank"> NEW
