--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -6,14 +6,7 @@ html
     = stylesheet_link_tag 'reizoko', media: 'all'
 
   body
-    header class="navbar navbar-fixed-top navbar-inverse"
-      div class="container"
-        = link_to image_tag('reizoko_app_logo.png'), '#', id: "logo"
-        nav
-          ul class="nav navbar-nav navbar-right"
-            li <a href="#"> ABOUT
-            li <a href="#"> HELP
-          /ul liタグを使う場合、aタグを<>で囲む必要あり
+    = render 'layouts/header'
     main
       div class="row"
         div class="center jumbotron"
