--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -3,7 +3,7 @@ doctype html
 html
   head
     meta charset="utf-8"
-    
+    title <= yield(:title) > | Reizoko Stock | 
     = stylesheet_link_tag 'reizoko', media: 'all'
 
   body
