--- a/app/views/reizoko/new.html.slim
+++ b/app/views/reizoko/new.html.slim
@@ -1,1 +1,10 @@
-p helloworld
+- provide(:title,"index")
+doctype html
+html
+  head
+    meta charset="utf-8"
+    title <= yield(:title) > | Reizoko Stock | 
+    = stylesheet_link_tag 'reizoko', media: 'all'
+
+  body
+    = render 'layouts/header'
