th要素で見出しも追加

--- a/app/views/reizoko/index.html.slim
+++ b/app/views/reizoko/index.html.slim
@@ -9,6 +9,11 @@ html
     = render 'layouts/header'
 
 table border="1"
+  thead
+    tr
+      th お名前
+      th 在庫
+
   tbody
     - @stock.each do |stock|
       tr
