表の位置を右斜め下に移動

--- a/app/assets/stylesheets/reizoko.scss
+++ b/app/assets/stylesheets/reizoko.scss
@@ -43,8 +43,14 @@ p {
     float: left; //floatは浮かべて表示する
 }
 
+table {
+    margin-top: 50px;
+    margin-left: 50px;
+
+}
 thead {
     font-size: 1.5em;
+    
 }
 
 tbody {
