--- a/app/assets/stylesheets/reizoko.scss
+++ b/app/assets/stylesheets/reizoko.scss
@@ -57,3 +57,9 @@ thead {
 tbody {
     font-size: 1.3em;
 }
+
+input[type="text"] {
+    width: 300px;
+    height: 40px;
+    margin-left: 60px;
+}
