見た目はとりあえず完成

--- a/app/views/reizoko/new.html.slim
+++ b/app/views/reizoko/new.html.slim
@@ -26,4 +26,5 @@ html
       .form-group
         = f.label :備考
         = f.text_field :memo, class: 'form-control'
-      = f.submit nil, class: 'btn btn-primary'       
+      div class="button"
+        = f.submit nil, class: 'btn btn-primary'       
