--- a/app/assets/stylesheets/reizoko.scss
+++ b/app/assets/stylesheets/reizoko.scss
@@ -58,8 +58,15 @@ tbody {
     font-size: 1.3em;
 }
 
+.form-group {
+    margin-left: 60px;
+}
+
 input[type="text"] {
     width: 300px;
     height: 40px;
+}
+
+.button {
     margin-left: 60px;
 }
