エラ〜メッセージを日本語化した。

--- a/app/views/stocks/show.html.slim
+++ b/app/views/stocks/show.html.slim
@@ -4,7 +4,7 @@ html
   head
     meta charset="utf-8"
     title <= yield(:title) > | Reizoko Stock | 
-    = stylesheet_link_tag 'reizoko', media: 'all'
+    = stylesheet_link_tag 'stocks', media: 'all'
 
   body
     = render 'layouts/header'
