適切ではないデータを登録したらエラーが出るように仕向けた

--- a/app/views/stocks/new.html.slim
+++ b/app/views/stocks/new.html.slim
@@ -16,6 +16,7 @@ html
     /local: trueはajax(非同期通信を行う時)を利用する場合はfalseにする
     /label :〇〇でラベル表示する
     = form_with model: @stock, local: true do |f|
+      = render 'shared/error_messages', model: f.object
       .form-group
         = f.label :在庫名
         = f.text_field :name, class: 'form-control'
