--- a/app/views/stocks/new.html.slim
+++ b/app/views/stocks/new.html.slim
@@ -22,7 +22,7 @@ html
         = f.text_field :name, class: 'form-control'
       .form-group
         = f.label :個数
-        = f.text_field :stock, class: 'form-control'
+        = f.number_field :stock, class: 'form-control'
       .form-group
         = f.label :単位
         = f.text_field :unit, class: 'form-control'
