データ登録成功のテスト(正常系)を追加

--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -9,6 +9,7 @@ html
     = render 'layouts/header'
 
   main
+    h1　在庫一覧
     .nav.justify-content-end
       = link_to '新規登録',new_stock_path, class: 'nav-link'
     
