--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -17,12 +17,14 @@ html
       thead
         tr
           th お名前
-          th 在庫
+          th 在庫数
+          th 単位
 
       tbody
         - @stock.each do |stock|
           tr
             td = stock.name
             td align="center" = stock.stock
+            td align="center" =  stock.unit
 
 br
