--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -5,4 +5,4 @@ header class="navbar navbar-fixed-top navbar-inverse"
           ul class="nav navbar-nav navbar-right"
             li <a href="#"> ABOUT
             li <a href="#"> HELP
-          /ul liタグを使う場合、aタグを<>で囲む必要あり
+          /ul liタグを使う場合はaタグを<>で囲む必要あり
