--- a/app/views/stocks/new.html.slim
+++ b/app/views/stocks/new.html.slim
@@ -14,7 +14,7 @@ html
       = link_to '在庫一覧', stocks_path, class: 'nav-link'
   
     /local: trueはajax(非同期通信を行う時)を利用する場合はfalseにする
-    /label :〇〇でラベル表示する
+    /label :〇〇でラベル表示
     = form_with model: @stock, local: true do |f|
       = render 'shared/error_messages', model: f.object
       .form-group
