コードの意味を忘れないように補足コメント書いた

--- a/app/views/admin/users/new.html.slim
+++ b/app/views/admin/users/new.html.slim
@@ -1,5 +1,5 @@
 h1 ユーザー登録
-
+/ [:admin,@user]はform_with model: @user, url: admin_users_pathの省略バージョン /
 = form_with model: [:admin,@user], local: true do |f|
   .form-group
   = f.label :name, '名前'
