--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -3,6 +3,8 @@ header class="navbar navbar-fixed-top navbar-inverse"
         = link_to image_tag('reizoko_app_logo.png'), '#', id: "logo"
         nav
           ul class="nav navbar-nav navbar-right"
+            if current_user
+            li.nav-item= link_to 'ログアウト',logout_path, method: :delete, class: 'nav-link'
             li <a href="#"> ABOUT
             li <a href="#"> HELP
           /ul liタグを使う場合,aタグを<>で囲む必要あり
