一覧ページから詳細ページに飛ぶリンクを作成

--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -27,5 +27,6 @@ html
             td align="center" = stock.stock
             td align="center" =  stock.unit
             td align="center" = link_to '編集', edit_stock_path(stock)
+            td align="center" = link_to '詳細', stock_path(stock)
 
 br
