詳細はやめて、一覧に全ての情報を載せる形にしてみた。 在庫情報を知りたいだけなので、詳細は今のところ不要と判断。

--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -19,14 +19,16 @@ html
           th お名前
           th 在庫数
           th 単位
+          th 詳細
 
       tbody
         - @stock.each do |stock|
           tr
             td = stock.name
             td align="center" = stock.stock
-            td align="center" =  stock.unit
+            td align="center" = stock.unit
+            td align="center" = stock.memo
             td align="center" = link_to '編集', edit_stock_path(stock)
-            td align="center" = link_to '詳細', stock_path(stock)
+            
 
 br
