--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -29,6 +29,6 @@ html
             td align="center" = stock.unit
             td align="center" = stock.memo
             td align="center" = link_to '編集', edit_stock_path(stock)
-            
+            td align="center" = link_to '削除', stock,method: :delete
 
 br
