--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -11,7 +11,7 @@ html
   main
     h1　在庫一覧
     .nav.justify-content-end
-      = link_to '新規登録',new_stock_path, class: 'nav-link'
+      = link_to '新規登録',new_stock_path, class: 'btn btn-primary'
     
     table border="1" width="400" height="100"
       thead
