--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,5 @@
 
  // -- bootstrap import
  @import "bootstrap-sprockets";
- @import "bootstrap"
+ @import "bootstrap";
+ @import "tempusdominus-bootstrap-4.css";
