--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,5 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "tempusdominus-bootstrap-4.css";
+ @import "font-awesome";
+ @import "tempusdominus-bootstrap-4.css";
