--- a/app/assets/stylesheets/stocks.scss
+++ b/app/assets/stylesheets/stocks.scss
@@ -1,5 +1,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "tempusdominus-bootstrap-4.css";
+@import "font-awesome";
+@import "tempusdominus-bootstrap-4.css";
 
 body {
     padding-top: 60px;
