・strong parameterに賞味期限を表すパラメータ(expire_date)を追加 ・フォーム一部修正(まだ完成していない)

--- a/app/views/layouts/test.html.erb
+++ b/app/views/layouts/test.html.erb
@@ -10,5 +10,12 @@
                 </div>
             </div>
         </div>
+        <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker4').datetimepicker({
+                    format: 'L'
+                });
+            });
+        </script>
     </div>
 </div>
