--- a/app/views/layouts/test.html.slim
+++ b/app/views/layouts/test.html.slim
@@ -7,3 +7,5 @@
           .input-group-append[data-target="#datetimepicker4" data-toggle="datetimepicker"]
             .input-group-text
               i.fa.fa-calendar
+    script[type="text/javascript"]
+      |  $(function () { $('#datetimepicker4').datetimepicker({ format: 'L' }); }); 
