時刻は不要なのでto_dateで表示されないようにした

--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -29,7 +29,7 @@ html
             td = stock.name
             td align="center" = stock.stock
             td align="center" = stock.unit
-            td align="center" = stock.expire_date
+            td align="center" = stock.expire_date.to_date
             td align="center" = stock.memo
             td align="center" = link_to '編集', edit_stock_path(stock)
             td align="center" = link_to '削除', stock,method: :delete
