--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -29,9 +29,12 @@ html
             td = stock.name
             td align="center" = stock.stock
             td align="center" = stock.unit
-            td align="center" = stock.expire_date.to_date
+            - if stock.expire_date < Time.now
+              td align="center" class="expired" = stock.expire_date.to_date
+            - else
+              td align="center" = stock.expire_date.to_date
             td align="center" = stock.memo
             td align="center" = link_to '編集', edit_stock_path(stock)
             td align="center" = link_to '削除', stock,method: :delete
-
+            
 br
