・インスタンス変数名を修正 ・csvをダウンロードするコード修正

--- a/app/views/shared/_error_messages.html.slim
+++ b/app/views/shared/_error_messages.html.slim
@@ -1,6 +1,6 @@
-- if @stock.errors.any?
+- if @stocks.errors.any?
   div class = "alert alert-warning"
     ul
-      - @stock.errors.full_messages.each do |msg|
+      - @stocks.errors.full_messages.each do |msg|
         li
           = msg
