--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -24,7 +24,7 @@ html
           th 
 
       tbody
-        - @stock.each do |stock|
+        - @stocks.each do |stock|
           tr
             td = stock.name
             td align="center" = stock.stock
