--- a/app/views/shared/_shared_forms.html.slim
+++ b/app/views/shared/_shared_forms.html.slim
@@ -1,4 +1,4 @@
-= form_with model: @stock, local: true do |f|
+= form_with model: @stocks, local: true do |f|
       = render 'shared/error_messages', model: f.object
       .form-group
         = f.label :在庫名
