--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -13,6 +13,11 @@ html
     .nav.justify-content-end
       = link_to '新規登録',new_stock_path, class: 'btn btn-primary'
     
+    br
+    
+    .nav.justify-content-end
+      = link_to "csvダウンロード", stocks_path(format: :csv) ,class: 'btn btn-primary'
+    
     table border="1" width="400" height="100"
       thead
         tr
