--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -18,6 +18,10 @@ html
     .nav.justify-content-end
       = link_to "csvダウンロード", stocks_path(format: :csv) ,class: 'btn btn-primary'
     
+
+    = form_tag import_stocks_path, multipart: true do
+      = file_field_tag 'file'
+ 
     table border="1" width="500" height="100"
       thead
         tr
