CSVアップロードで更新及び新規の在庫作成できた

--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -21,6 +21,7 @@ html
 
     = form_tag import_stocks_path, multipart: true do
       = file_field_tag 'file'
+      = submit_tag "アップロード"
  
     table border="1" width="500" height="100"
       thead
