一時しのぎで右上にcurrent_userを表示するようにした。

--- a/app/assets/stylesheets/stocks.scss
+++ b/app/assets/stylesheets/stocks.scss
@@ -36,6 +36,14 @@ h1 {
     color: red;
 }
 
+.login_user {
+    font-size: 1.2em;
+    position: absolute;
+    right: 10px;
+    top: 60px;
+    color: blue;
+}
+
 p {
     font-size: 1.1em;
     line-height: 1.7em;
