navbarにログインユーザー名載せることができたのでこれで一旦完了

--- a/app/assets/stylesheets/stocks.scss
+++ b/app/assets/stylesheets/stocks.scss
@@ -36,12 +36,8 @@ h1 {
     color: red;
 }
 
-.login_user {
+.navbar-text {
     font-size: 1.2em;
-    position: absolute;
-    right: 10px;
-    top: 60px;
-    color: blue;
 }
 
 p {
