--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -4,7 +4,11 @@ header class="navbar navbar-fixed-top navbar-inverse"
         nav
           ul class="nav navbar-nav navbar-right"
             = if current_user
+            .navbar-text
+              'ログインユーザー：
+              = current_user.name
             li.nav-item= link_to 'ログアウト',logout_path, method: :delete, class: 'nav-link'
+            /li.nav-item= link_to 'current_user.name',#,class: 'nav-link'
             li <a href="#"> ABOUT
             li <a href="#"> HELP
           /ul liタグを使う場合,aタグを<>で囲む必要あり
