新規在庫登録したら想定通りの文字や数が表示されるテスト完成

--- a/app/views/stocks/index.html.slim
+++ b/app/views/stocks/index.html.slim
@@ -26,7 +26,7 @@ html
     table border="1" width="500" height="100"
       thead
         tr
-          th class="contrlo_number" 管理番号
+          th class="control_number" 管理番号
           th class="name" 在庫名
           th class="stock" 在庫数
           th class="unit" 単位
